tests/fail/invalid_name4.stderr
error: unexpected identifier
 --> tests/fail/invalid_name4.rs:9:67
  |
9 |     let _wave = sine_wave!(rate: 1000, frequency: 100, len: 1000, invalid: 10);
  |                                                                   ^^^^^^^
